# pretty_size

./: Cargo.toml  LICENSE.txt  README.md
src/: display.rs  main.rs  size.rs
