[package]
name = "pretty_size"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
clap = "3.0.0-beta.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ldscript-parser = "0.1.0"
anyhow = "1.0"
path-clean = "0.1.0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.