[package]
name = "pretty_size"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ldscript-parser = "0.1.0"
path-clean = "1.0.1"
clap = { version = "4.1.9" }
color-eyre = { version = "0.6.2" }
elf = "0.7.2"


[profile.release]
strip = true  # Automatically strip symbols from the binary.
